today last update

--- a/docs-page.html
+++ b/docs-page.html
@@ -2769,109 +2769,109 @@ Elements:
 									<td><strong>Checkbox</strong></td>
 									<td>Add custom checkboxes for agreements or options</td>
 									<td>Terms acceptance, newsletter signup, gift wrap</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/checkbox.png?v=1762920698', 'Checkbox Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/checkbox.png?v=1762935030', 'Checkbox Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Custom Banner</strong></td>
 									<td>Display promotional banners or important messages</td>
 									<td>Free shipping offers, holiday messages, promotions</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/custombanner.png?v=1762920258', 'Custom Banner Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/custombanner.png?v=1762935030', 'Custom Banner Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Custom Button</strong></td>
 									<td>Add clickable buttons with custom actions</td>
 									<td>Apply discount codes, special requests</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/custombutton.png?v=1762908593', 'Custom Button Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/custombutton.png?v=1762935030', 'Custom Button Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Contact Info</strong></td>
 									<td>Display contact information</td>
 									<td>Support phone numbers, email, chat links</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/contactinfo.png?v=1762905841', 'Contact Info Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/contactinfo.png?v=1762935030', 'Contact Info Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Social Media Links</strong></td>
 									<td>Add links to your social media profiles</td>
 									<td>Build social presence, increase followers</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/social.png?v=1762921594', 'Social Media Links Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/social.png?v=1762935030', 'Social Media Links Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>List</strong></td>
 									<td>Display bullet point lists</td>
 									<td>Shipping info, guarantees, features</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/list.png?v=1762921382', 'List Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/list.png?v=1762935030', 'List Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Age Validator</strong></td>
 									<td>Verify customer age before purchase</td>
 									<td>Alcohol, tobacco, age-restricted products</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/autoproduct.png?v=1762922082', 'Age Validator Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/agevalidator.png?v=1762935030', 'Age Validator Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Upsell / Recommended products</strong></td>
 									<td>Show product recommendations</td>
 									<td>Increase AOV, cross-sell, upsell</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/upsellrecommended.png?v=1762924015', 'Upsell / Recommended Products Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/upsellrecommended.png?v=1762935030', 'Upsell / Recommended Products Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Payment Icons</strong></td>
 									<td>Display accepted payment method icons</td>
 									<td>Build trust, show payment options</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/payment_method.png?v=1762906782', 'Payment Icons Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/payment_method.png?v=1762935030', 'Payment Icons Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Free Shipping</strong></td>
 									<td>Display free shipping progress bar</td>
 									<td>Encourage higher cart values</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/freeshipping.png?v=1762921878', 'Free Shipping Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/freeshipping.png?v=1762935031', 'Free Shipping Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Custom Input</strong></td>
 									<td>Add custom text input fields</td>
 									<td>Order notes, special instructions</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/custominput_7ede1b15-31f5-4a6f-920c-ddee4dc9668f.png?v=1762923839', 'Custom Input Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/custominput.png?v=1762935030', 'Custom Input Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Trust Badge</strong></td>
 									<td>Show security and trust badges</td>
 									<td>SSL certificates, guarantees, secure checkout</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/trustbadge.png?v=1762923484', 'Trust Badge Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/trustbadge.png?v=1762935030', 'Trust Badge Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Survey / Form</strong></td>
 									<td>Embed surveys and forms to collect customer input at checkout</td>
 									<td>Collect gift messages, preferences, PO numbers, or custom data</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/surveyfrom.png?v=1762922155', 'Survey / Form Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/surveyfrom.png?v=1762935030', 'Survey / Form Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Gift Message</strong></td>
 									<td>Allow customers to add personalized messages to gifts</td>
 									<td>Personalization, gift wrapping, special occasions</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/giftmessage.png?v=1762906565', 'Gift Message Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/giftmessage.png?v=1762935030', 'Gift Message Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Delivery Instructions</strong></td>
 									<td>Add special delivery instructions or handling notes</td>
 									<td>Fragile items, special requests, signature requirements</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/deliveryinstruction.png?v=1762907056', 'Delivery Instructions Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/deliveryinstruction.png?v=1762935030', 'Delivery Instructions Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Discount Message</strong></td>
 									<td>Display promotional discount messages or alerts</td>
 									<td>Show discounts applied, time-limited offers, savings</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/DiscountMessage.png?v=1762919122', 'Discount Message Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/DiscountMessage.png?v=1762935030', 'Discount Message Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>Benefits List / Testimonials</strong></td>
 									<td>Display benefits lists or customer testimonials</td>
 									<td>Build trust with social proof, highlight key features</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/benifitlist.png?v=1762919560', 'Benefits List / Testimonials Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/benifitlist.png?v=1762919560', 'Benefits List / Testimonials Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 								<tr>
 									<td><strong>QR-code / Image</strong></td>
 									<td>Embed QR codes or images in checkout</td>
 									<td>Product QR codes, loyalty programs, promotional images</td>
-									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/qrcode.png?v=1762921985', 'QR-code / Image Extension Example')"><i class="fas fa-search-plus"></i></button></td>
+									<td class="text-center"><button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#extensionModal" onclick="showExtensionImage('https://cdn.shopify.com/s/files/1/0590/2123/0178/files/qrcode.png?v=1762935030', 'QR-code / Image Extension Example', '800x600')"><span style="font-size: 0.85rem;">View</span></button></td>
 								</tr>
 							</tbody>
 						</table>
