--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>CoderDocs - Bootstrap Documentation Template For Software Projects</title>
+    <title>Checkout Nexus</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -28,15 +28,13 @@
         <div class="branding docs-branding">
             <div class="container-fluid position-relative py-2">
                 <div class="docs-logo-wrapper">
-	                <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon me-2" src="assets/images/coderdocs-logo.svg" alt="logo"><span class="logo-text">Coder<span class="text-alt">Docs</span></span></a></div>    
+	                <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon me-2" src="assets/images/coderdocs-logo.svg" alt="logo"><span class="logo-text">Checkout Nexus</span></span></a></div>    
                 </div><!--//docs-logo-wrapper-->
 	            <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 	
 					<ul class="social-list list-inline mx-md-3 mx-lg-5 mb-0 d-none d-lg-flex">
-						<li class="list-inline-item"><a href="#"><i class="fa-brands fa-github fa-fw"></i></a></li>
-			            <li class="list-inline-item"><a href="#"><i class="fa-brands fa-x-twitter fa-fw"></i></a></li>
-		                <li class="list-inline-item"><a href="#"><i class="fa-brands fa-slack fa-fw"></i></a></li>
-		                <li class="list-inline-item"><a href="#"><i class="fa-brands fa-product-hunt fa-fw"></i></a></li>
+						<li class="list-inline-item"><a href="#"><i class="fa-brands fa-facebook fa-fw"></i></a></li>
+			          
 		            </ul><!--//social-list-->
 		            <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/coderdocs-free-bootstrap-5-documentation-template-for-software-projects/" class="btn btn-primary d-none d-lg-flex">Download</a>
 	            </div><!--//docs-top-utilities-->
@@ -50,7 +48,7 @@
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
 		    <h1 class="page-heading single-col-max mx-auto">Documentation</h1>
-		    <div class="page-intro single-col-max mx-auto">Everything you need to get your software documentation online.</div>
+		    <div class="page-intro single-col-max mx-auto">Shopify Checkout Nexus Documentation</div>
 		    <div class="main-search-box pt-3 d-block mx-auto">
                  <form class="search-form w-100">
 		            <input type="text" placeholder="Search the docs..." name="search" class="form-control search-input">
@@ -70,10 +68,10 @@
 								    <span class="theme-icon-holder card-icon-holder me-2">
 								        <i class="fas fa-map-signs"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Introduction</span>
+							        <span class="card-title-text">Getting Started</span>
 							    </h5>
 							    <div class="card-text">
-								    Section overview goes here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+		Begin your Checkout Nexus journey with our comprehensive getting started guide. Learn the basics and set up your first integration.
 							    </div>
 							    <a class="card-link-mask" href="docs-page.html#section-1"></a>
 						    </div><!--//card-body-->
@@ -89,7 +87,7 @@
 							        <span class="card-title-text">Installation</span>
 							    </h5>
 							    <div class="card-text">
-								    Section overview goes here. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
+								Step-by-step guide to install and configure Checkout Nexus in your Shopify store. Get up and running in minutes with our easy setup process.
 							    </div>
 							    <a class="card-link-mask" href="docs-page.html#section-2"></a>
 						    </div><!--//card-body-->
@@ -102,7 +100,7 @@
 								    <span class="theme-icon-holder card-icon-holder me-2">
 								        <i class="fas fa-box fa-fw"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">APIs</span>
+							        <span class="card-title-text">Payment Customizations</span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
@@ -118,7 +116,7 @@
 								    <span class="theme-icon-holder card-icon-holder me-2">
 								        <i class="fas fa-cogs fa-fw"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Integrations</span>
+							        <span class="card-title-text">Shipping Customizations</span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
@@ -134,7 +132,7 @@
 								    <span class="theme-icon-holder card-icon-holder me-2">
 								        <i class="fas fa-tools"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Utilities</span>
+							        <span class="card-title-text">Order Validations</span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
@@ -150,7 +148,7 @@
 								    <span class="theme-icon-holder card-icon-holder me-2">
 								        <i class="fas fa-laptop-code"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Web</span>
+							        <span class="card-title-text">Upsell</span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
@@ -166,7 +164,7 @@
 								    <span class="theme-icon-holder card-icon-holder me-2">
 								        <i class="fas fa-tablet-alt"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Mobile</span>
+							        <span class="card-title-text">Auto Add Gift/Product</span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
@@ -182,7 +180,7 @@
 								    <span class="theme-icon-holder card-icon-holder me-2">
 								        <i class="fas fa-book-reader"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Resources</span>
+							        <span class="card-title-text">Surveys & Forms</span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
