--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		    <div class="page-intro single-col-max mx-auto">Shopify Checkout Nexus Documentation</div>
 		    <div class="main-search-box pt-3 d-block mx-auto">
                  <form class="search-form w-100">
-		            <input type="text" placeholder="Search the docs..." name="search" class="form-control search-input">
+		            <input type="text" placeholder="Search the docs..." name="search" class="form-control search-input" autocomplete="off">
 		            <button type="submit" class="btn search-btn" value="Search"><i class="fas fa-search"></i></button>
 		        </form>
              </div>
@@ -253,7 +253,8 @@
     <script src="assets/js/highlight-custom.js"></script> 
     <script src="assets/plugins/simplelightbox/simple-lightbox.min.js"></script>      
     <script src="assets/plugins/gumshoe/gumshoe.polyfills.min.js"></script> 
-    <script src="assets/js/docs.js"></script> 
+    <script src="assets/js/docs.js"></script>
+    <script src="assets/js/search.js"></script> 
 
 </body>
 </html> 
