--- a/docs-page.html
+++ b/docs-page.html
@@ -46,7 +46,7 @@
 					<div class="top-search-box d-none d-lg-flex">
 						<form class="search-form">
 							<input type="text" placeholder="Search the docs..." name="search"
-								class="form-control search-input">
+								class="form-control search-input" autocomplete="off">
 							<button type="submit" class="btn search-btn" value="Search"><i
 									class="fas fa-search"></i></button>
 						</form>
@@ -71,7 +71,7 @@
 		<div id="docs-sidebar" class="docs-sidebar">
 			<div class="top-search-box d-lg-none p-3">
 				<form class="search-form">
-					<input type="text" placeholder="Search the docs..." name="search" class="form-control search-input">
+					<input type="text" placeholder="Search the docs..." name="search" class="form-control search-input" autocomplete="off">
 					<button type="submit" class="btn search-btn" value="Search"><i class="fas fa-search"></i></button>
 				</form>
 			</div>
@@ -3284,6 +3284,7 @@ Elements:
 	<script src="assets/plugins/simplelightbox/simple-lightbox.min.js"></script>
 	<script src="assets/plugins/gumshoe/gumshoe.polyfills.min.js"></script>
 	<script src="assets/js/docs.js"></script>
+	<script src="assets/js/search.js"></script>
 
 	<!-- Extension Image Modal Script -->
 	<script>
