--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<li class="list-inline-item"><a href="#"><i class="fa-brands fa-facebook fa-fw"></i></a></li>
 			          
 		            </ul><!--//social-list-->
-		            <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/coderdocs-free-bootstrap-5-documentation-template-for-software-projects/" class="btn btn-primary d-none d-lg-flex">Download</a>
+		            <a href="https://apps.shopify.com/checkout-nexus" class="btn btn-primary d-none d-lg-flex">App</a>
 	            </div><!--//docs-top-utilities-->
             </div><!--//container-->
         </div><!--//branding-->
